--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 								 <br />
 							</p>
 						</header>
-						<span class="image"><img src="images/Antikythera 1.jpg" alt="" /></span>
+						<span class="image"><img src="images/Antikythera 1.jpg" alt="Antikythera Mechanism" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/index.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/index.jpg" alt="Programming mind" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -90,7 +90,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/index2.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/index2.jpg" alt="minde mechanism" /></span>
 					<div class="content">
 						<header>
 							<h2>Interface momentun</h2>
@@ -106,7 +106,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/flexbox.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/flexbox.jpg" alt="flex concrit side" /></span>
 					<div class="content">
 						<header>
 							<h2>Dark Side of Flex</h2>
@@ -167,7 +167,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">html! The end is always near!</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -177,8 +177,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>-Dimos Christidis The next code star-</h2>
+							<p>Programming an extremely creative profession based in a logic creativity</p>
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
