--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<iframe style="display: none;" width="560" height="315" src="https://www.youtube.com/embed/YVX0s75rogc?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+		<iframe style="display:none;"width="560" height="315" src="https://www.youtube.com/embed/3zhVa7oqlLw?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
@@ -115,7 +115,7 @@
 							  the basic structure of a small development idea.
 							</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p></p>
 						<ul class="actions">
 							<li><a href="#" class="button">2b || !2b</a></li>
 						</ul>
