--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<iframe style="display:none;"width="560" height="315" src="https://www.youtube.com/embed/3zhVa7oqlLw?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe style="display:none;" width="560" height="315" src="https://www.youtube.com/embed/yBtGoakdfPE?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
@@ -162,7 +162,7 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
 									<h3>Code Accessibility</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>A problem well stated is a problem half solved</p>
 								</section>
 							</div>
 						</div>
