--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<h2>Astrolab Innovations</h2>
 										<p>"The Beginning is the most important part of the world". -Plato- 
 											Learning programming is like painting a new art work.Its a magic form 
-											to understand the wisdom of development throught the mecahnism of the mind. 
+											to understand the wisdom of development throught the mechanism of the mind. 
 										</p>
 									</header>
 								</div>
