--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<iframe style="display:none;" width="560" height="315" src="https://www.youtube.com/embed/yBtGoakdfPE?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<!-- <iframe style="display:none;" width="560" height="315" src="https://www.youtube.com/embed/yBtGoakdfPE?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
@@ -56,7 +56,7 @@
 								 <br />
 							</p>
 						</header>
-						<span class="image"><img src="images/Antikythera 1.jpg" alt="Antikythera Mechanism" /></span>
+						<span class="image"><img src="images/Dimos1.jpg" alt="me" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -99,7 +99,7 @@
 						</header>
 						<p>"Programming is a skill best acquired by practice and example rather than from books"...</p>
 						<ul class="actions">
-							<li><a href="#" class="button">while(!(succeed=try()));</a></li>
+							<li><a href="https://github.com/OldDognoob/Sprint-Challenge--User-Interface" class="button">while(!(succeed=try()));</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -117,7 +117,7 @@
 						</header>
 						<p></p>
 						<ul class="actions">
-							<li><a href="#" class="button">2b || !2b</a></li>
+							<li><a href="https://github.com/OldDognoob/UI-III-Flexbox" class="button">2b || !2b</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
