--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/index.jpg" alt="Programming mind" /></span>
+					<span class="image fit main"><img src="images/web 2.jpg" alt="Programming mind" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
